Update /verify signature for consistency
