# signer/docs/swagger.json
@@ -66,7 +66,7 @@
         },
         "/verify": {
             "post": {
-                "description": "Verify that given signature matches given text, using the public key",
+                "description": "Verify that given signature matches given text; quality of life feature, can be done locally with the public key.",
                 "consumes": [
                     "application/json"
                 ],
@@ -87,13 +87,19 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Signature matches",
                         "schema": {
                             "$ref": "#/definitions/signer.VerifyOkResponse"
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Bad JSON",
+                        "schema": {
+                            "$ref": "#/definitions/signer.ErrorResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "Signature doesn't match",
                         "schema": {
                             "$ref": "#/definitions/signer.ErrorResponse"
                         }
@@ -133,27 +139,16 @@
         "signer.VerifyBody": {
             "type": "object",
             "properties": {
-                "data": {
+                "dated_text": {
                     "type": "string"
                 },
                 "signature": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
+                    "type": "string"
                 }
             }
         },
         "signer.VerifyOkResponse": {
-            "type": "object",
-            "properties": {
-                "correct": {
-                    "type": "boolean"
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
+            "type": "object"
         }
     }
 }
